--- a/Booking.Models.DAL/Booking.Models.DAL.csproj
+++ b/Booking.Models.DAL/Booking.Models.DAL.csproj
@@ -51,12 +51,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="BookingContext.cs" />
+    <Compile Include="BookingInitializer.cs" />
+    <Compile Include="Hotel.cs" />
+    <Compile Include="Migrations\202008311247369_ini.cs" />
+    <Compile Include="Migrations\202008311247369_ini.designer.cs">
+      <DependentUpon>202008311247369_ini.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Room.cs" />
+    <Compile Include="RoomBooking.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202008311247369_ini.resx">
+      <DependentUpon>202008311247369_ini.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
